# IntervalTimer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml  tests.yml
src/: CMakeLists.txt  PlanModel.cpp  PlanModel.h  interval.cmake  intervall.cmake  main.cpp  main.qml  mainAndroid.qml  mainDesctop.qml  tests.cmake
src/Interval/: Interval.cpp  Interval.h  Interval.test.cpp  IntervalFromJson.cpp  IntervalToJson.cpp  IntervalToJson.h  IntervallToJson.cpp  IntervallToJson.h  Plan.cpp  Plan.h  Plan.test.cpp  PlanFromJson.cpp  PlanFromJson.h  PlanIterator.cpp  PlanIterator.h  PlanIterator.test.cpp  PlanModel.cpp  PlanModel.h  PlanModel.test.cpp  PlanRunner.cpp  PlanRunner.h  PlanRunner.test.cpp  PlanToJson.cpp  PlanToJson.h
src/Intervaltimer/: CMakeLists.txt
src/Intervaltimer/intervaltimer/: ConstantStorage.cpp  ConstantStorage.h  DatabaseProvider.cpp  DatabaseProvider.h  DatabaseProvider.test.cpp  Interval.cpp  Interval.h  Interval.test.cpp  IntervalFromJson.h  Plan.cpp  Plan.h  Plan.test.cpp  PlanFromJson.cpp  PlanFromJson.h  PlanIterator.cpp  PlanIterator.h  PlanIterator.test.cpp  PlanModel.cpp  PlanModel.h  PlanModel.test.cpp  PlanRunner.cpp  PlanRunner.h  PlanRunner.test.cpp  PlanStorageBuffer.cpp  PlanStorageBuffer.h  PlanStorageBuffer.test.cpp  PlanStorageModel.cpp  PlanStorageModel.h  PlanStorageModel.test.cpp  PlanToJson.cpp  Timer.cpp  Timer.h  Timer.test.cpp  TimerBase.cpp  TimerBase.h  main.test.cpp
src/Intervaltimer/qml/: IntervalView.qml  LoadPlanView.qml  PlanEditorView.qml  PlanRunningView.qml  PlanView.qml  StorePlanView.qml
src/Intervaltimer/qml/android/: AboutView.qml  CopyrightView.qml  DurationControl.qml  DurationTumbler.qml  HelpView.qml  IntervalView.qml  LicenceView.qml  LoadPlanView.qml  MenuView.qml  PlanEditorView.qml  PlanRunningView.qml  PlanView.qml  ProgressView.qml  StorePlanView.qml  Style.qml
src/Intervaltimer/qml/desctop/: IntervalView.qml  LoadPlanView.qml  PlanEditorView.qml  PlanRunningView.qml  PlanView.qml  ProgressView.qml  StorePlanView.qml
src/interval/: interval.cpp  interval.h  interval.test.cpp  plan.cpp  plan.h  plan.test.cpp
src/intervall/: intervall.cpp  intervall.h  intervall.test.cpp  plan.cpp  plan.h  plan.test.cpp
src/qml/: CMakeLists.txt  Interval.qml  IntervalView.qml  Plan.qml  PlanRunningView.qml  PlanView.qml  main.qml
