cmake_minimum_required(VERSION 3.21)

set (CMAKE_PROJECT_VERSION_MAJOR 1)
set (CMAKE_PROJECT_VERSION_MINOR 1)
set (CMAKE_PROJECT_VERSION_PATCH 0)
set (CMAKE_PROJECT_VERSION "${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH}")

add_compile_definitions(CMAKE_PROJECT_VERSION_MAJOR=${CMAKE_PROJECT_VERSION_MAJOR})
add_compile_definitions(CMAKE_PROJECT_VERSION_MINOR=${CMAKE_PROJECT_VERSION_MINOR})
add_compile_definitions(CMAKE_PROJECT_VERSION_PATCH=${CMAKE_PROJECT_VERSION_PATCH})


project(Intervaltimer VERSION  "${CMAKE_PROJECT_VERSION}" LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(QML_IMPORT_PATH ${CMAKE_CURRENT_BINARY_DIR} CACHE STRING "" FORCE)

enable_testing()
add_subdirectory(third_party)
add_subdirectory(src)
